tests/negative_tests/syntax_errors/assign_in_condition.c
// INVALID - Syntax Error: assignment vs equality
int main() {
    int x;
    if (x = 5) {  // This is assignment, not comparison - should work but unusual
        return x;
    }
    return 0;
}
